[gd_scene load_steps=5 format=3 uid="uid://bdoxkjk3diuj4"]

[ext_resource type="Script" uid="uid://cyqwgixwsm453" path="res://Scripts/game_menu.gd" id="1_k0w1u"]
[ext_resource type="Script" uid="uid://dtuwsn6c5jhwk" path="res://Scripts/resume.gd" id="2_1och7"]
[ext_resource type="Shader" uid="uid://ci5nniy2f1ft1" path="res://Scenes/pause_menu.gdshader" id="2_bpi0q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vmyb1"]
shader = ExtResource("2_bpi0q")
shader_parameter/lod = 0.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vmyb1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -50.5
offset_right = 58.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Resume
"
script = ExtResource("2_1och7")

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Settings"

[node name="Save and Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Save and Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="button_down" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Save and Quit" to="." method="_on_quit_button_down"]
